--- a/pom.xml
+++ b/pom.xml
@@ -233,7 +233,7 @@
                 <dependency>
                     <groupId>org.apache.carbondata</groupId>
                     <artifactId>carbondata-spark</artifactId>
-                    <version>1.0.0-incubating-SNAPSHOT</version>
+                    <version>1.0.0-incubating</version>
                 </dependency>
             </dependencies>
         </profile>
@@ -250,31 +250,35 @@
 
         <profile>
             <id>build-distr</id>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.0.0</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <!--<configuration>-->
-                            <!--<relocations>-->
-                                <!--<relocation>-->
-                                    <!--<pattern>com.fasterxml</pattern>-->
-                                    <!--<shadedPattern>com.dxy.data.com.fasterxml</shadedPattern>-->
-                                <!--</relocation>-->
-                                <!--<relocation>-->
-                                    <!--<pattern>org.apache.http</pattern>-->
-                                    <!--<shadedPattern>com.dxy.data.org.apache.http</shadedPattern>-->
-                                <!--</relocation>-->
-                            <!--</relocations>-->
-                        <!--</configuration>-->
-                    </execution>
-                </executions>
-            </plugin>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-shade-plugin</artifactId>
+                        <version>2.4.3</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>shade</goal>
+                                </goals>
+                                <!--<configuration>-->
+                                    <!--<relocations>-->
+                                        <!--<relocation>-->
+                                            <!--<pattern>com.fasterxml</pattern>-->
+                                            <!--<shadedPattern>com.dxy.data.com.fasterxml</shadedPattern>-->
+                                        <!--</relocation>-->
+                                        <!--<relocation>-->
+                                            <!--<pattern>org.apache.http</pattern>-->
+                                            <!--<shadedPattern>com.dxy.data.org.apache.http</shadedPattern>-->
+                                        <!--</relocation>-->
+                                    <!--</relocations>-->
+                                <!--</configuration>-->
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
 
     </profiles>
@@ -421,12 +425,6 @@
             </exclusions>
         </dependency>
 
-
-        <!--<dependency>-->
-        <!--<groupId>org.carbondata</groupId>-->
-        <!--<artifactId>carbon-hadoop</artifactId>-->
-        <!--<version>0.1.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
 
         <dependency>
             <groupId>org.elasticsearch</groupId>
