--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>streaming.king</groupId>
     <artifactId>streamingpro</artifactId>
-    <version>0.4.7-SNAPSHOT-${mode}-${spark.version}</version>
+    <version>0.4.8-SNAPSHOT-${mode}-${spark.version}</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -170,7 +170,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <mode>debug</mode>
+                <mode>local</mode>
             </properties>
             <dependencies>
                 <dependency>
