--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,6 @@
     <artifactId>streamingpro</artifactId>
     <packaging>pom</packaging>
     <version>0.4.14-SNAPSHOT-${mode}-${spark.version}</version>
-    <modules>
-        <module>fink-stream</module>
-    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -107,6 +104,18 @@
                     <groupId>streamingpro.king</groupId>
                     <artifactId>${structured.streaming.artifacteId}</artifactId>
                     <version>${streamingpro.version}-SNAPSHOT-online-2.0.2</version>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <profile>
+            <id>flink-1.2.0</id>
+            <dependencies>
+                <dependency>
+                    <systemPath>/Users/allwefantasy/CSDNWorkSpace/streamingpro-flink/target/streamingpro-flink-1.0-SNAPSHOT.jar</systemPath>
+                    <groupId>streamingpro.king</groupId>
+                    <artifactId>streamingpro-flink</artifactId>
+                    <version>1.0-SNAPSHOT</version>
                 </dependency>
             </dependencies>
         </profile>
@@ -340,8 +349,8 @@
                 <!--<artifactId>httpclient</artifactId>-->
                 <!--</exclusion>-->
                 <!--<exclusion>-->
-                    <!--<groupId>mysql</groupId>-->
-                    <!--<artifactId>mysql-connector-java</artifactId>-->
+                <!--<groupId>mysql</groupId>-->
+                <!--<artifactId>mysql-connector-java</artifactId>-->
                 <!--</exclusion>-->
 
                 <!--<exclusion>-->
@@ -451,7 +460,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
 
         <dependency>
             <groupId>org.scalactic</groupId>
