--- a/pom.xml
+++ b/pom.xml
@@ -40,29 +40,6 @@
     <profiles>
 
         <profile>
-            <id>spark-1.6.1</id>
-            <!-- default -->
-            <properties>
-                <spark.version>1.6.1</spark.version>
-                <spark.streaming.kafka.artifactId>spark-streaming-kafka_2.10</spark.streaming.kafka.artifactId>
-                <spark.sql.kafka.artifactId>spark-streaming-kafka_2.10</spark.sql.kafka.artifactId>
-                <serviceframework.version>1.3.0-SNAPSHOT</serviceframework.version>
-                <structured.streaming.artifacteId>structured-streaming-stub</structured.streaming.artifacteId>
-            </properties>
-        </profile>
-
-        <profile>
-            <id>spark-2.0.2</id>
-            <properties>
-                <spark.version>2.0.2</spark.version>
-                <spark.streaming.kafka.artifactId>spark-streaming-kafka-0-8_2.10</spark.streaming.kafka.artifactId>
-                <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_2.10</spark.sql.kafka.artifactId>
-                <serviceframework.version>1.3.2-SNAPSHOT-9.2.16</serviceframework.version>
-                <structured.streaming.artifacteId>structured-streaming-core</structured.streaming.artifacteId>
-            </properties>
-        </profile>
-
-        <profile>
             <id>online</id>
             <properties>
                 <mode>online</mode>
@@ -86,50 +63,6 @@
                 <mode>local</mode>
                 <scope>compile</scope>
             </properties>
-        </profile>
-
-        <profile>
-            <id>structured-streaming</id>
-            <dependencies>
-                <dependency>
-                    <groupId>streamingpro.king</groupId>
-                    <artifactId>${structured.streaming.artifacteId}</artifactId>
-                    <version>${streamingpro.version}-SNAPSHOT-online-2.0.2</version>
-                </dependency>
-            </dependencies>
-        </profile>
-
-        <profile>
-            <id>flink-1.2.0</id>
-            <dependencies>
-                <dependency>
-                    <systemPath>/Users/allwefantasy/CSDNWorkSpace/streamingpro-flink/target/streamingpro-flink-1.0-SNAPSHOT.jar</systemPath>
-                    <groupId>streamingpro.king</groupId>
-                    <artifactId>streamingpro-flink</artifactId>
-                    <version>1.0-SNAPSHOT</version>
-                </dependency>
-            </dependencies>
-        </profile>
-
-        <profile>
-            <id>carbondata</id>
-            <dependencies>
-                <dependency>
-                    <groupId>org.apache.carbondata</groupId>
-                    <artifactId>carbondata-spark</artifactId>
-                    <version>1.0.0-incubating</version>
-                </dependency>
-            </dependencies>
-        </profile>
-        <profile>
-            <id>hive-thrift-server</id>
-            <dependencies>
-                <dependency>
-                    <groupId>org.apache.spark</groupId>
-                    <artifactId>spark-hive-thriftserver_2.10</artifactId>
-                    <version>${spark.version}</version>
-                </dependency>
-            </dependencies>
         </profile>
 
         <profile>
@@ -190,11 +123,6 @@
 
     </profiles>
     <dependencies>
-        <dependency>
-            <groupId>streaming.king</groupId>
-            <artifactId>streamingpro-common</artifactId>
-            <version>0.4.14-SNAPSHOT-${mode}-${spark.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -260,30 +188,30 @@
                     <groupId>org.slf4j</groupId>
                     <artifactId>jcl-over-slf4j</artifactId>
                 </exclusion>
-                <!--<exclusion>-->
-                <!--<groupId>org.eclipse.jetty</groupId>-->
-                <!--<artifactId>jetty-server</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                <!--<groupId>org.eclipse.jetty</groupId>-->
-                <!--<artifactId>jetty-servlet</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                <!--<groupId>org.eclipse.jetty</groupId>-->
-                <!--<artifactId>jetty-io</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                <!--<groupId>org.eclipse.jetty</groupId>-->
-                <!--<artifactId>jetty-http</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                <!--<groupId>org.eclipse.jetty</groupId>-->
-                <!--<artifactId>jetty-util</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                <!--<groupId>org.eclipse.jetty</groupId>-->
-                <!--<artifactId>jetty-continuation</artifactId>-->
-                <!--</exclusion>-->
+                <exclusion>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-server</artifactId>
+                </exclusion>
+                <exclusion>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-servlet</artifactId>
+                </exclusion>
+                <exclusion>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-io</artifactId>
+                </exclusion>
+                <exclusion>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-http</artifactId>
+                </exclusion>
+                <exclusion>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-util</artifactId>
+                </exclusion>
+                <exclusion>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-continuation</artifactId>
+                </exclusion>
                 <!--mongo相关-->
                 <exclusion>
                     <groupId>net.csdn</groupId>
