--- a/streamingpro-commons/pom.xml
+++ b/streamingpro-commons/pom.xml
@@ -5,11 +5,31 @@
     <parent>
         <artifactId>streamingpro</artifactId>
         <groupId>streaming.king</groupId>
-        <version>0.4.14-SNAPSHOT-local-1.6.1</version>
+        <version>0.4.14-SNAPSHOT-${mode}-${spark.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>streamingpro-common</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+            <version>2.6.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.101tec</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.5</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jboss.netty</groupId>
+                    <artifactId>netty</artifactId>
+                </exclusion>
+
+            </exclusions>
+        </dependency>
+    </dependencies>
 
 
 </project>
