--- a/streamingpro-spark/pom.xml
+++ b/streamingpro-spark/pom.xml
@@ -11,6 +11,60 @@
 
     <artifactId>streamingpro-spark</artifactId>
 
+    <profiles>
+        <profile>
+            <id>spark-1.6.1</id>
+            <!-- default -->
+            <properties>
+                <spark.version>1.6.1</spark.version>
+                <spark.streaming.kafka.artifactId>spark-streaming-kafka_2.10</spark.streaming.kafka.artifactId>
+                <spark.sql.kafka.artifactId>spark-streaming-kafka_2.10</spark.sql.kafka.artifactId>
+                <serviceframework.version>1.3.0-SNAPSHOT</serviceframework.version>
+                <structured.streaming.artifacteId>structured-streaming-stub</structured.streaming.artifacteId>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>spark-2.0.2</id>
+            <properties>
+                <spark.version>2.0.2</spark.version>
+                <spark.streaming.kafka.artifactId>spark-streaming-kafka-0-8_2.10</spark.streaming.kafka.artifactId>
+                <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_2.10</spark.sql.kafka.artifactId>
+                <serviceframework.version>1.3.2-SNAPSHOT-9.2.16</serviceframework.version>
+                <structured.streaming.artifacteId>structured-streaming-core</structured.streaming.artifacteId>
+            </properties>
+        </profile>
+        <profile>
+            <id>structured-streaming</id>
+            <dependencies>
+                <dependency>
+                    <groupId>streamingpro.king</groupId>
+                    <artifactId>${structured.streaming.artifacteId}</artifactId>
+                    <version>${streamingpro.version}-SNAPSHOT-online-2.0.2</version>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>carbondata</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.carbondata</groupId>
+                    <artifactId>carbondata-spark</artifactId>
+                    <version>1.0.0-incubating</version>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>hive-thrift-server</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-hive-thriftserver_2.10</artifactId>
+                    <version>${spark.version}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
     <dependencies>
 
         <dependency>
