--- a/streamingpro-commons/pom.xml
+++ b/streamingpro-commons/pom.xml
@@ -10,12 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>streamingpro-common</artifactId>
+    <version>0.4.14-SNAPSHOT-${mode}</version>
     <dependencies>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
             <version>2.6.0</version>
-            <scope>provided</scope>
+            <scope>${scope}</scope>
         </dependency>
         <dependency>
             <groupId>com.101tec</groupId>
