--- a/streamingpro-spark/pom.xml
+++ b/streamingpro-spark/pom.xml
@@ -34,6 +34,62 @@
                 <structured.streaming.artifacteId>structured-streaming-core</structured.streaming.artifacteId>
             </properties>
         </profile>
+
+        <profile>
+            <id>shade</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-shade-plugin</artifactId>
+                        <version>2.4.3</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>shade</goal>
+                                </goals>
+                                <configuration>
+                                    <relocations>
+                                        <relocation>
+                                            <pattern>org.eclipse.jetty</pattern>
+                                            <shadedPattern>streaming.king.org.eclipse.jetty</shadedPattern>
+                                        </relocation>
+
+                                    </relocations>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>build-distr</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <version>3.0.0</version>
+                        <configuration>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                                <phase>package</phase> <!-- bind to the packaging phase -->
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>structured-streaming</id>
             <dependencies>
@@ -76,7 +132,7 @@
         <dependency>
             <groupId>streaming.king</groupId>
             <artifactId>streamingpro-common</artifactId>
-            <version>0.4.14-SNAPSHOT-${mode}-${spark.version}</version>
+            <version>0.4.14-SNAPSHOT-${mode}</version>
         </dependency>
 
         <dependency>
@@ -141,5 +197,6 @@
         </dependency>
 
     </dependencies>
+
 
 </project>
