--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
         <dependency>
             <groupId>net.csdn</groupId>
             <artifactId>ServiceFramework</artifactId>
-            <version>1.3.2-SNAPSHOT-9.2.16</version>
+            <version>1.3.2-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
