--- a/streamingpro-commons/pom.xml
+++ b/streamingpro-commons/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>hadoop-client</artifactId>
             <version>2.6.0</version>
             <scope>${scope}</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.101tec</groupId>
