--- a/streamingpro-spark/pom.xml
+++ b/streamingpro-spark/pom.xml
@@ -27,7 +27,7 @@
         <profile>
             <id>spark-2.0.2</id>
             <properties>
-                <spark.version>2.0.2</spark.version>
+                <spark.version>spark-2.0.2</spark.version>
                 <spark.streaming.kafka.artifactId>spark-streaming-kafka-0-8_2.10</spark.streaming.kafka.artifactId>
                 <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_2.10</spark.sql.kafka.artifactId>
                 <serviceframework.version>1.3.2-SNAPSHOT-9.2.16</serviceframework.version>
