--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>streaming.king</groupId>
     <artifactId>streamingpro</artifactId>
     <packaging>pom</packaging>
-    <version>0.4.14-SNAPSHOT-${mode}-${spark.version}</version>
+    <version>0.4.14-SNAPSHOT-${mode}</version>
     <modules>
         <module>streamingpro-flink</module>
         <module>streamingpro-spark</module>
@@ -16,13 +16,13 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <scala.version>2.10.3</scala.version>
-        <scala.2.version>2.10</scala.2.version>
+        <scala.binary.version>2.10</scala.binary.version>
         <spark.version>1.6.1</spark.version>
         <flink.version>1.2.0</flink.version>
         <spark.sql.kafka.artifactId>spark-streaming-kafka_2.10</spark.sql.kafka.artifactId>
         <streamingpro.version>0.4.7</streamingpro.version>
         <spark.streaming.kafka.artifactId>spark-streaming-kafka_2.10</spark.streaming.kafka.artifactId>
-        <serviceframework.version>1.3.0-SNAPSHOT</serviceframework.version>
+        <serviceframework.version>1.3.2-SNAPSHOT-${scala.binary.version}</serviceframework.version>
         <scope>provided</scope>
     </properties>
 
@@ -47,7 +47,6 @@
                 <mode>online</mode>
                 <scope>provided</scope>
             </properties>
-
         </profile>
         <profile>
             <id>dev</id>
@@ -105,7 +104,7 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
-            <version>2.10.3</version>
+            <version>${scala.version}</version>
         </dependency>
 
         <dependency>
@@ -116,7 +115,7 @@
         <dependency>
             <groupId>net.csdn</groupId>
             <artifactId>ServiceFramework</artifactId>
-            <version>1.3.2-SNAPSHOT</version>
+            <version>1.3.2-SNAPSHOT-${scala.binary.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -209,7 +208,7 @@
         <dependency>
             <groupId>serviceframework</groupId>
             <artifactId>Dispatcher</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-SNAPSHOT-${scala.binary.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>net.csdn</groupId>
